--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="Assets/reset.css">
   <link rel="stylesheet" href="Assets/syle.css">
 </head>
-<body background="spacey">
+
+<body>
   
 <!-- Navbar & header -->
   <header>
@@ -23,45 +24,51 @@
 
 <!-- main body of the code for the different project links and demos. -->
   <main>
-
-    <img src="Assets/IMG_0540.JPG"picture of Cody Berry"/>
-
-    <h2 class="hover-2">About Me</h2>
-    <section id="aboutMe" class="aboutMe">
-
-      <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quo eveniet saepe ipsa est, dolores omnis totam voluptatem autem voluptates laborum eos voluptatibus. Corrupti, sunt veritatis beatae tempora debitis praesentium numquam.  </p>
-      <p>For more information abotu my previous work history you can check out my <span><a href="https://www.linkedin.com/in/cody-berry/">Linkedin</a></span>.</p>
+    <section id="PersonImage">    
+      <img src="Assets/IMG_0540.JPG"picture of Cody Berry"/>
     </section>
 
-    <h2 class="hover-2">Portfolio</h2>
-    <section class="portfolio">
 
-      <a id="portfolio1" href="https://github.com/Krimeas/prework-study-guide" target="_blank" >
+
+    <section id="aboutMe">
+      <h2 class="hover-2">About Me</h2>
+
+      <p>My name is Cody Berry.  I am currently attending a coding Bootcamp at UT Austin and I will be graduating this December.  I have 15 years of experience in a CNC manufacturing startup where I’ve worn many different hats ranging from Purchasing and Inventory Control Manager, to Salesman, Office Manager, and even Shop Floor Supervisor.  While not all of those skills transfered over to my new career path; the ability to talk with and manage others through projects will no doubt help me moving forwards.</p>
+      <p>For more information abotu my previous work history you can check out my <span><a href="https://www.linkedin.com/in/cody-berry/" target="_blank">Linkedin</a></span>.</p>
+    </section>
+
+
+    <section id="portfolio">
+      <h2 class="hover-2">Portfolio</h2>
+      <div class="portfolio">
+        <a id="portfolio1" href="https://github.com/Krimeas/prework-study-guide" target="_blank" >
         <img src="Assets/PreworkSG.JPG" alt="image of prework studyguide website" >
-
-      </a>
+        </a>
+      </div>
     </section>
+
     <section class="portfolio2">
       <a id="portfolio2" href="https://github.com/Krimeas/01---Challenge" target="_blank" >
         <img src="Assets/chal1.JPG" alt="image of challenge 01 website" >
       </a>
 
       <a id="portfolio2" href="https://github.com/Krimeas/challenge-02" target="_blank">
-        <img src="Assets/PreworkSG.JPG" alt="image of challenge 01 website">
+        <img src="Assets/Chal2.JPG" alt="image of challenge 02 website">
       </a>
 
       <a id="portfolio2" href="https://github.com/Krimeas" target="_blank">
-        <img src="Assets/PreworkSG.JPG" alt="image of challenge 01 website">
+        <img src="Assets/redd-5U_28ojjgms-unsplash.jpg" alt="Filler image for fake Portfolio4">
       </a>
 
       <a id="portfolio2" href="https://github.com/Krimeas" target="_blank">
-        <img src="Assets/PreworkSG.JPG" alt="image of challenge 01 website">
+        <img src="Assets/mario-gogh-VBLHICVh-lI-unsplash.jpg" alt="Filler image for fake Portfolio4">
       </a>
 
     </section>
 
-    <h2 class="hover-2">Contact Me</h2>
+    
     <section id="contactMe">
+      <h2 class="hover-2">Contact Me</h2>
       <ul>
         <li>Find me on <a href="https://www.linkedin.com/in/cody-berry/" target="_blank"> Linkedin</a></li>
         <li>Phone: 555-555-5555</li>
