index.html alterations - linked repos to DEPLOYED sites, added github repo link in contact me.

--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     <section id="portfolio">
       <h2 class="hover-2">Portfolio</h2>
       <div class="portfolio">
-        <a id="portfolio1" href="https://github.com/Krimeas/prework-study-guide" target="_blank" >
+        <a id="portfolio1" href="https://krimeas.github.io/prework-study-guide/" target="_blank" >
         <img src="Assets/PreworkSG.JPG" alt="image of prework studyguide website" >
         </a>
       </div>
     </section>
 
     <section class="portfolio2">
-      <a id="portfolio2" href="https://github.com/Krimeas/01---Challenge" target="_blank" >
+      <a id="portfolio2" href="https://krimeas.github.io/01---Challenge/" target="_blank" >
         <img src="Assets/chal1.JPG" alt="image of challenge 01 website" >
       </a>
 
-      <a id="portfolio2" href="https://github.com/Krimeas/challenge-02" target="_blank">
+      <a id="portfolio2" href="https://krimeas.github.io/First-Portfolio/" target="_blank">
         <img src="Assets/Chal2.JPG" alt="image of challenge 02 website">
       </a>
 
@@ -73,6 +73,7 @@
         <li>Find me on <a href="https://www.linkedin.com/in/cody-berry/" target="_blank"> Linkedin</a></li>
         <li>Phone: 555-555-5555</li>
         <li>Email me at <a <a href="krimeass@gmail.com">krimeass@gmail.com</a></li>
+        Github Repo: https://github.com/Krimeas
       </ul>
 
     
