fixed bug where github link and text weren't showing up on the page; fixed by bracketing with the li tag.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li>Find me on <a href="https://www.linkedin.com/in/cody-berry/" target="_blank"> Linkedin</a></li>
         <li>Phone: 555-555-5555</li>
         <li>Email me at <a <a href="krimeass@gmail.com">krimeass@gmail.com</a></li>
-        Github Repo: https://github.com/Krimeas
+        <li>Github Repo: <a href="https://github.com/Krimeas" target="_blank">https://github.com/Krimeas</li>
       </ul>
 
     
