Fixed github link error from lack of closing 'a' tag; Spilled into footer text.  Updated and added comments in CSS and HTML, and removed several redundent or unworking lines of code.  Fixed READme to show reset.css provided by UT Austin.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,15 @@
 
 <!-- main body of the code for the different project links and demos. -->
   <main>
+
+    <!-- Image of Cody Berry broken into section to get correct formatting alone. -->
     <section id="PersonImage">    
       <img src="Assets/IMG_0540.JPG"picture of Cody Berry"/>
     </section>
 
 
 
+  <!-- About Me section, first use of hover-2for heading 2 styles.  Span added for linkedin link -->
     <section id="aboutMe">
       <h2 class="hover-2">About Me</h2>
 
@@ -38,6 +41,7 @@
     </section>
 
 
+  <!-- Portfolio 1 section, largest image and linked site.  Broken from Portfolio 2 to correct style issues related to flexbox and shrink/enlarge placement issues. Class and ID for portfolio 1 broken apart to correct styling issues.  Image put in div to fix issue with h2 element. -->
     <section id="portfolio">
       <h2 class="hover-2">Portfolio</h2>
       <div class="portfolio">
@@ -47,6 +51,8 @@
       </div>
     </section>
 
+
+  <!-- Portfolio 2 section, multiple portfolios, three real two fake for demonstration purposes.  Image source links in READme.  Class and ID for portfolio 2 broken apart to correct styling issues.  Different from 'Portfolio' for style issues related to size. -->
     <section class="portfolio2">
       <a id="portfolio2" href="https://krimeas.github.io/01---Challenge/" target="_blank" >
         <img src="Assets/chal1.JPG" alt="image of challenge 01 website" >
@@ -66,14 +72,14 @@
 
     </section>
 
-    
+  <!-- Contact Me section, could change lists to table, lists simpler.  Look into possible image instead of type for linking Github. -->
     <section id="contactMe">
       <h2 class="hover-2">Contact Me</h2>
       <ul>
         <li>Find me on <a href="https://www.linkedin.com/in/cody-berry/" target="_blank"> Linkedin</a></li>
         <li>Phone: 555-555-5555</li>
         <li>Email me at <a <a href="krimeass@gmail.com">krimeass@gmail.com</a></li>
-        <li>Github Repo: <a href="https://github.com/Krimeas" target="_blank">https://github.com/Krimeas</li>
+        <li>Github Repo: <a href="https://github.com/Krimeas" target="_blank">https://github.com/Krimeas></a></li>
       </ul>
 
     
@@ -81,7 +87,7 @@
 
   </main>
 
-  <!-- Footer Section of the code -->
+  <!-- Footer Section, only developed at time of last edit. -->
   <footer>
     <p>Website developed by Cody Berry.</p>
   </footer>
