New Project added, 'movie search collab'

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cody Berry Portfolio</title>
-  <link rel="stylesheet" href="Assets/reset.css">
-  <link rel="stylesheet" href="Assets/syle.css">
+  <link rel="stylesheet" href="assets/reset.css">
+  <link rel="stylesheet" href="assets/syle.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 
     <!-- Image of Cody Berry broken into section to get correct formatting alone. -->
     <section id="PersonImage">    
-      <img src="Assets/IMG_0540.JPG"picture of Cody Berry"/>
+      <img src="assets/IMG_0540.JPG"picture of Cody Berry"/>
     </section>
 
 
@@ -45,29 +45,30 @@
     <section id="portfolio">
       <h2 class="hover-2">Portfolio</h2>
       <div class="portfolio">
-        <a id="portfolio1" href="https://krimeas.github.io/prework-study-guide/" target="_blank" >
-        <img src="Assets/PreworkSG.JPG" alt="image of prework studyguide website" >
+        <a id="portfolio1" href="https://sarahthoorens.github.io/movies-and-more/" target="_blank" >
+        <img src="assets/landing1.jpeg" alt="image of prework studyguide website" >
         </a>
       </div>
     </section>
 
 
+
   <!-- Portfolio 2 section, multiple portfolios, three real two fake for demonstration purposes.  Image source links in READme.  Class and ID for portfolio 2 broken apart to correct styling issues.  Different from 'Portfolio' for style issues related to size. -->
     <section class="portfolio2">
       <a id="portfolio2" href="https://krimeas.github.io/01---Challenge/" target="_blank" >
-        <img src="Assets/chal1.JPG" alt="image of challenge 01 website" >
+        <img src="assets/chal1.JPG" alt="image of challenge 01 website" >
       </a>
 
       <a id="portfolio2" href="https://krimeas.github.io/First-Portfolio/" target="_blank">
-        <img src="Assets/Chal2.JPG" alt="image of challenge 02 website">
+        <img src="assets/Chal2.JPG" alt="image of challenge 02 website">
+      </a>
+
+      <a id="portfolio2" href="https://krimeas.github.io/prework-study-guide/" target="_blank" >
+        <img src="assets/PreworkSG.JPG" alt="image of prework studyguide website" >
       </a>
 
       <a id="portfolio2" href="https://github.com/Krimeas" target="_blank">
-        <img src="Assets/redd-5U_28ojjgms-unsplash.jpg" alt="Filler image for fake Portfolio4">
-      </a>
-
-      <a id="portfolio2" href="https://github.com/Krimeas" target="_blank">
-        <img src="Assets/mario-gogh-VBLHICVh-lI-unsplash.jpg" alt="Filler image for fake Portfolio4">
+        <img src="assets/mario-gogh-VBLHICVh-lI-unsplash.jpg" alt="Filler image for fake Portfolio4">
       </a>
 
     </section>
