small image error fixed.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <!-- Image of Cody Berry broken into section to get correct formatting alone. -->
     <section id="PersonImage">    
-      <img src="assets/IMG_0540.JPG"picture of Cody Berry"/>
+      <img src="assets/IMG_0540.JPG" alt="picture of Cody Berry">
     </section>
 
 
