picture error in readme only on github 1st correction attempt.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </a>
 
       <a id="portfolio2" href="https://krimeas.github.io/First-Portfolio/" target="_blank">
-        <img src="assets/Chal2.JPG" alt="image of challenge 02 website">
+        <img src="assets/chal2.JPG" alt="image of challenge 02 website">
       </a>
 
       <a id="portfolio2" href="https://krimeas.github.io/prework-study-guide/" target="_blank" >
