--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <ul>
         <li>Find me on <a href="https://www.linkedin.com/in/cody-berry/" target="_blank"> Linkedin</a></li>
         <li>Phone: 555-555-5555</li>
-        <li>Email me at <a <a href="krimeass@gmail.com">krimeass@gmail.com</a></li>
+        <li>Email me at <a href="krimeass@gmail.com">krimeass@gmail.com</a></li>
         <li>Github Repo: <a href="https://github.com/Krimeas" target="_blank">https://github.com/Krimeas></a></li>
       </ul>
 
